test/typeerrors/Examples/AltRight.hs
module AltRight where

f x = case x of
      True  -> "veulen" 
      False -> 32
